--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     </section>
     <!--Main content section-->
     <main>
-        <h2>My Skills</h2>
+        <h2>Contact</h2>
     </main>
     <!--Bottom page section -->
     <footer>
