--- a/index.html
+++ b/index.html
@@ -9,21 +9,55 @@
 <body>
     <!--Top page section-->
     <header>
-        <h1>Patrick Trollip</h1>
-        <h2>Fullstack Web developer</h2>
-    </header>
-    <!-- Navigation bar-->
-    <section>
+        <h1>About</h1>
+            <!-- Navigation bar-->
         <nav>
             <a href="index.html"><button>About</button></a>
             <a href="contact.html"><button>Contact</button></a>
             <a href="skills.html"><button>Skills</button></a>
             <a href="projects.html"><button>Projects</button></a>
         </nav>
-    </section>
+    </header>
     <!--Main content section-->
     <main>
-        <h2>About me</h2>
+        <section>
+            <img src="Assets\Guy.png" alt="Picture of Patrick Trollip dressed smart casual.">
+            <aside>
+                <h2>Patrick Trollip</h2>
+                <h3>Fullstack Web developer</h3>
+            </aside>
+        </section>
+        <section>
+            <h3>Information</h3>
+            <p>
+                I am a graduate Fullstack web developer who studied at code institute. I have hands on experience using modern web technologies like
+                <em>HTML5</em>, <em>CSS3</em> and <em>ECMA script versions 5 and 6</em>. I have covered the frontend, backend of web development. I strive to 
+                continue to learn and land my first awesome job as a developer. I have experience colaborating with others on a project as well as following UX 
+                instructions to build the desired websites. My favorite language is Javascript and my favourite web development area is on the front end.
+                I am a creative person who is aiming to write clean and readable code that follows convention and good practices while striving to build secure
+                websites that are as accessible to as many people as possible to help maximize business and positive user experience.
+                I strive to continue to learn and improve to be the best developer I can be. Finally a goal of mine would be to maybe develope a new language or 
+                style of making websites even better than we currently call conventional.
+            </p>
+        </section>
+        <section>
+            <h3>Technologies used:</h3>
+            <ul>
+                <li>HTML5</li>
+                <li>CSS3</li>
+                <li>Javascript</li>
+                <li>Python3</li>
+                <li>MongoDB</li>
+                <li>SQL</li>
+                <li>Nodejs</li>
+                <li>Bootstrap4</li>
+                <li>Jquery</li>
+                <li>Visual studio code editor</li>
+                <li>Heroku</li>
+                <li>Travis</li>
+                <li>AWS S3</li>
+            </ul>
+        </section>
     </main>
     <!--Bottom page section -->
     <footer>
