I changed the layout of the elements and added different titles to each page tab. Sections added to help set up page structures

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!--Top page section-->
     <header>
-        <h1>About</h1>
+        <h1>About me</h1>
             <!-- Navigation bar-->
         <nav>
             <a href="index.html"><button>About</button></a>
@@ -35,9 +35,9 @@
                 continue to learn and land my first awesome job as a developer. I have experience colaborating with others on a project as well as following UX 
                 instructions to build the desired websites. My favorite language is Javascript and my favourite web development area is on the front end.
                 I am a creative person who is aiming to write clean and readable code that follows convention and good practices while striving to build secure
-                websites that are as accessible to as many people as possible to help maximize business and positive user experience.
-                I strive to continue to learn and improve to be the best developer I can be. Finally a goal of mine would be to maybe develope a new language or 
-                style of making websites even better than we currently call conventional.
+                websites that are as accessible to as many people as possible to help maximize business and positive user experiences.
+                I strive to continue to learn and improve to be the best developer I can be. Finally a goal of mine would be to maybe develop a new language or 
+                style of making websites even better than we currently call conventional design or web2.0.
             </p>
         </section>
         <section>
