--- a/projects.html
+++ b/projects.html
@@ -3,27 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Patrick</title>
+    <title>Projects</title>
     <link rel="stylesheet" href="CSS\style.css">
 </head>
 <body>
     <!--Top page section-->
     <header>
-        <h1>Patrick Trollip</h1>
-        <h2>Fullstack Web developer</h2>
-    </header>
-    <!-- Navigation bar-->
-    <section>
+        <!--Page heading -->
+        <h1>My top projects</h1>
+        <!-- Navigation bar-->
         <nav>
             <a href="index.html"><button>About</button></a>
             <a href="contact.html"><button>Contact</button></a>
             <a href="skills.html"><button>Skills</button></a>
             <a href="projects.html"><button>Projects</button></a>
         </nav>
-    </section>
+    </header>
     <!--Main content section-->
     <main>
-        <h2>Projects page</h2>
+        <h2>Contact</h2>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
     </main>
     <!--Bottom page section -->
     <footer>
