Added font awesome kit to contact page to use icons.

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Patrick</title>
     <link rel="stylesheet" href="CSS\style.css">
+    <script src="https://kit.fontawesome.com/6f3658f931.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!--Top page section-->
@@ -21,10 +22,21 @@
     </header>
     <!--Main content section-->
     <main>
-        <h2>Contact</h2>
+        <!--Section A-->
+        <section>
+            <div>
+                <i class="fas fa-phone-alt"></i>
+            </div>
+            <div>
+                <h3>You can call me!</h3>
+                <p>0862454647</p>
+            </div>
+        </section>
+        <!--Section B-->
         <section></section>
+        <!--Section C-->
         <section></section>
-        <section></section>
+        <!--Section D-->
         <section></section>
     </main>
     <!--Bottom page section -->
