Added font awesome icons and links to contact.html. I added comments to the section elements for easier readability

--- a/contact.html
+++ b/contact.html
@@ -33,11 +33,35 @@
             </div>
         </section>
         <!--Section B-->
-        <section></section>
+        <section>
+            <div>
+                <i class="fas fa-envelope"></i>
+            </div>
+            <div>
+                <h3>You can email me!</h3>
+                <p>ptrollip@gmail.com</p>
+            </div>
+        </section>
         <!--Section C-->
-        <section></section>
+        <section>
+            <div>
+                <i class="fab fa-linkedin"></i>
+            </div>
+            <div>
+                <h3>Find me on LinkedIn</h3>
+                <p><a href="https://www.linkedin.com/in/patrick-trollip-04765095/">My LinkedIn</a></p>
+            </div>
+        </section>
         <!--Section D-->
-        <section></section>
+        <section>
+            <div>
+                <i class="fab fa-github-square"></i>
+            </div>
+            <div>
+                <h3>Github profile</h3>
+                <p><a href="https://github.com/Patoman90">Patrick's github</a></p>
+            </div>
+        </section>
     </main>
     <!--Bottom page section -->
     <footer>
