--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--Top page section-->
     <header>
         <h1>About me</h1>
-            <!-- Navigation bar-->
+        <!-- Navigation bar-->
         <nav>
             <a href="index.html"><button>About</button></a>
             <a href="contact.html"><button>Contact</button></a>
@@ -20,6 +20,7 @@
     </header>
     <!--Main content section-->
     <main>
+        <!--Section A-->
         <section>
             <img src="Assets\Guy.png" alt="Picture of Patrick Trollip dressed smart casual.">
             <aside>
@@ -27,6 +28,7 @@
                 <h3>Fullstack Web developer</h3>
             </aside>
         </section>
+        <!--Section B-->
         <section>
             <h3>Information</h3>
             <p>
@@ -40,6 +42,7 @@
                 style of making websites even better than we currently call conventional design or web2.0.
             </p>
         </section>
+        <!--Section C-->
         <section>
             <h3>Technologies used:</h3>
             <ul>
