Added another image to assets and added my first edit to the readme.md file

--- a/skills.html
+++ b/skills.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patrick's skills & Education</title>
     <link rel="stylesheet" href="CSS\style.css">
+    <script src="https://kit.fontawesome.com/6f3658f931.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!--Top page section-->
@@ -21,11 +22,98 @@
     </header>
     <!--Main content section-->
     <main>
-        <h2>Contact</h2>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
+        <!--Section A-->
+        <section>
+            <div>
+                <img src="Assets\frontend.png" alt="Image of hypertext markup language 5 icon, cascading stylesheets 3 icon, javascript icon side by side">
+            </div>
+            <div>
+                <h2>Front-end skills</h2>
+                <ul>
+                    <li>
+                        <h3></h3>
+                        <p></p>
+                    </li>
+                    <li>
+                        <h3></h3>
+                        <p></p>
+                    </li>
+                    <li>
+                        <h3></h3>
+                        <p></p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <!--Section B-->
+        <section>
+            <div>
+                <img src="Assets\backend.png" alt="Image of python3 and mongo database being intergrated together">
+            </div>
+            <div>
+                <h2>Back-end skills</h2>
+                <ul>
+                    <li>
+                        <h3></h3>
+                        <p></p>
+                    </li>
+                    <li>
+                        <h3></h3>
+                        <p></p>
+                    </li>
+                    <li>
+                        <h3></h3>
+                        <p></p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <!--Section C-->
+        <section>
+            <div>
+                <img src="" alt="">
+            </div>
+            <div>
+                <h2>Frameworks</h2>
+                <ul>
+                    <li>
+                        <h3></h3>
+                        <p></p>
+                    </li>
+                    <li>
+                        <h3></h3>
+                        <p></p>
+                    </li>
+                    <li>
+                        <h3></h3>
+                        <p></p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <!--Section D-->
+        <section>
+            <div>
+                <i class="fas fa-graduation-cap"></i>
+            </div>
+            <div>
+                <h2>Other skills & qualifications</h2>
+                <ul>
+                    <li>
+                        <h3></h3>
+                        <p></p>
+                    </li>
+                    <li>
+                        <h3></h3>
+                        <p></p>
+                    </li>
+                    <li>
+                        <h3></h3>
+                        <p></p>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
     <!--Bottom page section -->
     <footer>
