Added link to cv in project page and added links to projects and github in projects.html

--- a/projects.html
+++ b/projects.html
@@ -21,11 +21,37 @@
     </header>
     <!--Main content section-->
     <main>
-        <h2>Contact</h2>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
+        <section>
+            <h2>Mixed messages Project</h2>
+            <a href="https://patoman90.github.io/MixedMessagesProject/">View project</a>
+            <p>This project is one that that generates content when a user interacts with the single page site.</p>
+        </section>
+        <section>
+            <h2>Cyber sappers ecommerce site</h2>
+            <a href="https://patricks4thmilestoneproject.herokuapp.com/">View site</a>
+            <p>This project was made to represent a cyber security product and services site that takes payments and user input and saves it to a database.</p>
+        </section>
+        <section>
+            <h2>Farmer vs aliens html game.</h2>
+            <a href="https://patoman90.github.io/Milestone-project-2/"></a>
+            <p>This was the first game I programmed and made for a Milestone project after just completing javascript fundamentals.</p>
+        </section>
+        <section>
+            <h2>Tennis game</h2>
+            <a href="https://patoman90.github.io/TennisGame/Tennis.html"></a>
+            <p>This tennis game is one I made using a tutorial to practice javascript coding.</p>
+        </section>
+        <section>
+            <h2>Locks and security database site</h2>
+            <a href="https://locks-data-centric.herokuapp.com/">View site here.</a>
+            <p>A site made to incorporate CRUD functionality where a user can create data, read data, add data, edit data and have it stored on a database.</p>
+        </section>
+        <section>
+            <h3>Download CV</h3>
+            <a href="Assets\Patrick_Trollip_CV_Resume 2020.pdf">My CV</a>
+            <h3>Visit my github</h3>
+            <a href="https://github.com/Patoman90">My github</a>
+        </section>
     </main>
     <!--Bottom page section -->
     <footer>
