Added classes and grid layout to html files and their sections. Added class selectors to style.css and some styling for the Nav,Header,Footer sections.

--- a/contact.html
+++ b/contact.html
@@ -8,65 +8,67 @@
     <script src="https://kit.fontawesome.com/6f3658f931.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <!--Top page section-->
-    <header>
-        <!--Page heading -->
-        <h1>Contact me</h1>
-        <!-- Navigation bar-->
-        <nav>
-            <a href="index.html"><button>About</button></a>
-            <a href="contact.html"><button>Contact</button></a>
-            <a href="skills.html"><button>Skills</button></a>
-            <a href="projects.html"><button>Projects</button></a>
-        </nav>
-    </header>
-    <!--Main content section-->
-    <main>
-        <!--Section A-->
-        <section>
-            <div>
-                <i class="fas fa-phone-alt"></i>
-            </div>
-            <div>
-                <h3>You can call me!</h3>
-                <p>0862454647</p>
-            </div>
-        </section>
-        <!--Section B-->
-        <section>
-            <div>
-                <i class="fas fa-envelope"></i>
-            </div>
-            <div>
-                <h3>You can email me!</h3>
-                <p>ptrollip@gmail.com</p>
-            </div>
-        </section>
-        <!--Section C-->
-        <section>
-            <div>
-                <i class="fab fa-linkedin"></i>
-            </div>
-            <div>
-                <h3>Find me on LinkedIn</h3>
-                <p><a href="https://www.linkedin.com/in/patrick-trollip-04765095/">My LinkedIn</a></p>
-            </div>
-        </section>
-        <!--Section D-->
-        <section>
-            <div>
-                <i class="fab fa-github-square"></i>
-            </div>
-            <div>
-                <h3>Github profile</h3>
-                <p><a href="https://github.com/Patoman90">Patrick's github</a></p>
-            </div>
-        </section>
-    </main>
-    <!--Bottom page section -->
-    <footer>
-        <h2>Made by Patrick Trollip 2020</h2>
-    </footer>
+    <div class="gridContainer">
+        <!--Top page section-->
+        <header class="gridHeader">
+            <!--Page heading -->
+            <h1>Contact me</h1>
+            <!-- Navigation bar-->
+            <nav>
+                <a href="index.html"><button>About</button></a>
+                <a href="contact.html"><button>Contact</button></a>
+                <a href="skills.html"><button>Skills</button></a>
+                <a href="projects.html"><button>Projects</button></a>
+            </nav>
+        </header>
+        <!--Main content section-->
+        <main>
+            <!--Section 1-->
+            <section class="gridSection1">
+                <div>
+                    <i class="fas fa-phone-alt"></i>
+                </div>
+                <div>
+                    <h3>You can call me!</h3>
+                    <p>0862454647</p>
+                </div>
+            </section>
+            <!--Section 2-->
+            <section class="gridSection2">
+                <div>
+                    <i class="fas fa-envelope"></i>
+                </div>
+                <div>
+                    <h3>You can email me!</h3>
+                    <p>ptrollip@gmail.com</p>
+                </div>
+            </section>
+            <!--Section 3-->
+            <section class="gridSection3">
+                <div>
+                    <i class="fab fa-linkedin"></i>
+                </div>
+                <div>
+                    <h3>Find me on LinkedIn</h3>
+                    <p><a href="https://www.linkedin.com/in/patrick-trollip-04765095/">My LinkedIn</a></p>
+                </div>
+            </section>
+            <!--Section 4-->
+            <section class="gridSection4">
+                <div>
+                    <i class="fab fa-github-square"></i>
+                </div>
+                <div>
+                    <h3>Github profile</h3>
+                    <p><a href="https://github.com/Patoman90">Patrick's github</a></p>
+                </div>
+            </section>
+        </main>
+        <!--Bottom page section -->
+        <footer class="gridFooter">
+            <h2>Made by Patrick Trollip 2020</h2>
+        </footer>
+    </div>
     <!--Javascript link -->
     <script src="CustomJS\custom.js"></script>
 </body>
