--- a/projects.html
+++ b/projects.html
@@ -7,56 +7,64 @@
     <link rel="stylesheet" href="CSS\style.css">
 </head>
 <body>
-    <!--Top page section-->
-    <header>
-        <!--Page heading -->
-        <h1>My top projects</h1>
-        <!-- Navigation bar-->
-        <nav>
-            <a href="index.html"><button>About</button></a>
-            <a href="contact.html"><button>Contact</button></a>
-            <a href="skills.html"><button>Skills</button></a>
-            <a href="projects.html"><button>Projects</button></a>
-        </nav>
-    </header>
-    <!--Main content section-->
-    <main>
-        <section>
-            <h2>Mixed messages Project</h2>
-            <a href="https://patoman90.github.io/MixedMessagesProject/">View project</a>
-            <p>This project is one that that generates content when a user interacts with the single page site.</p>
-        </section>
-        <section>
-            <h2>Cyber sappers ecommerce site</h2>
-            <a href="https://patricks4thmilestoneproject.herokuapp.com/">View site</a>
-            <p>This project was made to represent a cyber security product and services site that takes payments and user input and saves it to a database.</p>
-        </section>
-        <section>
-            <h2>Farmer vs aliens html game.</h2>
-            <a href="https://patoman90.github.io/Milestone-project-2/"></a>
-            <p>This was the first game I programmed and made for a Milestone project after just completing javascript fundamentals.</p>
-        </section>
-        <section>
-            <h2>Tennis game</h2>
-            <a href="https://patoman90.github.io/TennisGame/Tennis.html"></a>
-            <p>This tennis game is one I made using a tutorial to practice javascript coding.</p>
-        </section>
-        <section>
-            <h2>Locks and security database site</h2>
-            <a href="https://locks-data-centric.herokuapp.com/">View site here.</a>
-            <p>A site made to incorporate CRUD functionality where a user can create data, read data, add data, edit data and have it stored on a database.</p>
-        </section>
-        <section>
-            <h3>Download CV</h3>
-            <a href="Assets\Patrick_Trollip_CV_Resume 2020.pdf">My CV</a>
-            <h3>Visit my github</h3>
-            <a href="https://github.com/Patoman90">My github</a>
-        </section>
-    </main>
-    <!--Bottom page section -->
-    <footer>
-        <h2>Made by Patrick Trollip 2020</h2>
-    </footer>
+    <div class="gridContainer">
+        <!--Top page section-->
+        <header class="gridHeader">
+            <!--Page heading -->
+            <h1>My top projects</h1>
+            <!-- Navigation bar-->
+            <nav>
+                <a href="index.html"><button>About</button></a>
+                <a href="contact.html"><button>Contact</button></a>
+                <a href="skills.html"><button>Skills</button></a>
+                <a href="projects.html"><button>Projects</button></a>
+            </nav>
+        </header>
+        <!--Main content section-->
+        <main>
+            <!--Section 1-->
+            <section class="gridSection1">
+                <h2>Mixed messages Project</h2>
+                <a href="https://patoman90.github.io/MixedMessagesProject/">View project</a>
+                <p>This project is one that that generates content when a user interacts with the single page site.</p>
+            </section>
+            <!--Section 2-->
+            <section class="gridSection2">
+                <h2>Cyber sappers ecommerce site</h2>
+                <a href="https://patricks4thmilestoneproject.herokuapp.com/">View site</a>
+                <p>This project was made to represent a cyber security product and services site that takes payments and user input and saves it to a database.</p>
+            </section>
+            <!--Section 3-->
+            <section class="gridSection3">
+                <h2>Farmer vs aliens html game.</h2>
+                <a href="https://patoman90.github.io/Milestone-project-2/"></a>
+                <p>This was the first game I programmed and made for a Milestone project after just completing javascript fundamentals.</p>
+            </section>
+            <!--Section 4-->
+            <section class="gridSection4">
+                <h2>Tennis game</h2>
+                <a href="https://patoman90.github.io/TennisGame/Tennis.html"></a>
+                <p>This tennis game is one I made using a tutorial to practice javascript coding.</p>
+            </section>
+            <!--Section 5-->
+            <section class="gridSection5">
+                <h2>Locks and security database site</h2>
+                <a href="https://locks-data-centric.herokuapp.com/">View site here.</a>
+                <p>A site made to incorporate CRUD functionality where a user can create data, read data, add data, edit data and have it stored on a database.</p>
+            </section>
+            <!--Section 6-->
+            <section class="gridSection6">
+                <h3>Download CV</h3>
+                <a href="Assets\Patrick_Trollip_CV_Resume 2020.pdf">My CV</a>
+                <h3>Visit my github</h3>
+                <a href="https://github.com/Patoman90">My github</a>
+            </section>
+        </main>
+        <!--Bottom page section -->
+        <footer class="gridFooter">
+            <h2>Made by Patrick Trollip 2020</h2>
+        </footer>
+    </div>
     <!--Javascript link -->
     <script src="CustomJS\custom.js"></script>
 </body>
