--- a/skills.html
+++ b/skills.html
@@ -8,174 +8,176 @@
     <script src="https://kit.fontawesome.com/6f3658f931.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <!--Top page section-->
-    <header>
-        <!--Page heading -->
-        <h1>My skillset</h1>
-        <!-- Navigation bar-->
-        <nav>
-            <a href="index.html"><button>About</button></a>
-            <a href="contact.html"><button>Contact</button></a>
-            <a href="skills.html"><button>Skills</button></a>
-            <a href="projects.html"><button>Projects</button></a>
-        </nav>
-    </header>
-    <!--Main content section-->
-    <main>
-        <!--Section A-->
-        <section>
-            <div>
-                <img src="Assets\frontend.png" alt="Image of hypertext markup language 5 icon, cascading stylesheets 3 icon, javascript icon side by side">
-            </div>
-            <div>
-                <h2>Front-end skills</h2>
-                <ul>
-                    <li>
-                        <h3>Hypertext Markup Language 5</h3>
-                        <p>I use this to add structure and layout to my websites and add content to webpages.</p>
-                    </li>
-                    <li>
-                        <h3>Cascading style sheets 3</h3>
-                        <p>I use this to style my content and make them visually appealing accross different devices and layouts.</p>
-                    </li>
-                    <li>
-                        <h3>Javascript</h3>
-                        <p>I use this scripting language to allow the user to interact with the page and turn a static page into one that reacts to input.</p>
-                    </li>
-                </ul>
-            </div>
-        </section>
-        <!--Section B-->
-        <section>
-            <div>
-                <img src="Assets\backend.png" alt="Image of python3 and mongo database being intergrated together">
-            </div>
-            <div>
-                <h2>Back-end skills</h2>
-                <ul>
-                    <li>
-                        <h3>Python3</h3>
-                        <p>I have used python to make eccomerce apps using it's scripting language and modules. It is a scripting language I use on the Back-end.</p>
-                    </li>
-                    <li>
-                        <h3>Structured query language</h3>
-                        <p>I have used SQL lite to check the backend for urls and paths to stored data in the database.</p>
-                    </li>
-                    <li>
-                        <h3>MongoDB</h3>
-                        <p>I used this to store product data and user data for eccomerce. I used it along side Python3.</p>
-                    </li>
-                    <li>
-                        <h3>AWS</h3>
-                        <p>I used AWS services before like S3 to store product data and user data for eccomerce.</p>
-                    </li>
-                </ul>
-            </div>
-        </section>
-        <!--Section C-->
-        <section>
-            <div>
-                <img src="Assets\frameworks.png" alt="Image of frameworks like Angular, fontawesome and Bootstrap 4">
-            </div>
-            <div>
-                <h2>Frameworks</h2>
-                <ul>
-                    <li>
-                        <h3>Angular</h3>
-                        <p>Angular is a javascript framework to streamline the development process of JS coding to make it less tedious a task.</p>
-                    </li>
-                    <li>
-                        <h3>Bootstrap 4</h3>
-                        <p>Bootstrap is a framework used to quickly add general styling to a website that can reduce the time needed to style common elements for example.</p>
-                    </li>
-                    <li>
-                        <h3>NodeJS</h3>
-                        <p>Node is a framework used to test code and check functionality.</p>
-                    </li>
-                    <li>
-                        <h3>Font Awesome</h3>
-                        <p>I used to add some icons to page elements and some interactivity with built in javascript.</p>
-                    </li>
-                    <li>
-                        <h3>jQuery</h3>
-                        <p>I use jquery to reduce the amount of javascript code needed for the same functionality and cleaner code.</p>
-                    </li>
-                </ul>
-            </div>
-        </section>
-        <!--Section D-->
-        <section>
-            <div>
-                <i class="fas fa-graduation-cap"></i>
-            </div>
-            <div>
-                <h2>Other skills, tools & qualifications</h2>
-                <ul>
-                    <li>
-                        <h3>Github version control</h3>
-                        <p></p>
-                    </li>
-                    <li>
-                        <h3>Command Line interface</h3>
-                        <p></p>
-                    </li>
-                    <li>
-                        <h3>Git Bash</h3>
-                        <p></p>
-                    </li>
-                    <li>
-                        <h3>Heroku</h3>
-                        <p></p>
-                    </li>
-                    <li>
-                        <h3>Windows OS</h3>
-                        <p></p>
-                    </li>
-                    <li>
-                        <h3>Virtual Box</h3>
-                        <p></p>
-                    </li>
-                    <li>
-                        <h3>Gitpod</h3>
-                        <p></p>
-                    </li>
-                    <li>
-                        <h3>Visual Studio code editior</h3>
-                        <p></p>
-                    </li>
-                    <li>
-                        <h3>Js Bin</h3>
-                        <p></p>
-                    </li>
-                    <li>
-                        <h3>Chrome developer tools</h3>
-                        <p></p>
-                    </li>
-                    <li>
-                        <h3>Comptia A+, security+ and network +</h3>
-                        <p></p>
-                    </li>
-                    <li>
-                        <h3>Schools and online learning</h3>
-                        <h4>Diploma Code institute</h4>
-                        <p></p>
-                        <h4>Certificates IT career switch</h4>
-                        <p></p>
-                        <h4>Courses Udemy</h4>
-                        <p></p>
-                        <h4>Freecodecamp.org</h4>
-                        <p></p>
-                        <h4>Zenva</h4>
-                        <p></p>
-                    </li>
-                </ul>
-            </div>
-        </section>
-    </main>
-    <!--Bottom page section -->
-    <footer>
-        <h2>Made by Patrick Trollip 2020</h2>
-    </footer>
+    <div class="gridContainer">
+        <!--Top page section-->
+        <header class="gridHeader">
+            <!--Page heading -->
+            <h1>My skillset</h1>
+            <!-- Navigation bar-->
+            <nav>
+                <a href="index.html"><button>About</button></a>
+                <a href="contact.html"><button>Contact</button></a>
+                <a href="skills.html"><button>Skills</button></a>
+                <a href="projects.html"><button>Projects</button></a>
+            </nav>
+        </header>
+        <!--Main content section-->
+        <main>
+            <!--Section 1-->
+            <section class="gridSection1">
+                <div>
+                    <img src="Assets\frontend.png" alt="Image of hypertext markup language 5 icon, cascading stylesheets 3 icon, javascript icon side by side">
+                </div>
+                <div>
+                    <h2>Front-end skills</h2>
+                    <ul>
+                        <li>
+                            <h3>Hypertext Markup Language 5</h3>
+                            <p>I use this to add structure and layout to my websites and add content to webpages.</p>
+                        </li>
+                        <li>
+                            <h3>Cascading style sheets 3</h3>
+                            <p>I use this to style my content and make them visually appealing accross different devices and layouts.</p>
+                        </li>
+                        <li>
+                            <h3>Javascript</h3>
+                            <p>I use this scripting language to allow the user to interact with the page and turn a static page into one that reacts to input.</p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <!--Section 2-->
+            <section class="gridSection2">
+                <div>
+                    <img src="Assets\backend.png" alt="Image of python3 and mongo database being intergrated together">
+                </div>
+                <div>
+                    <h2>Back-end skills</h2>
+                    <ul>
+                        <li>
+                            <h3>Python3</h3>
+                            <p>I have used python to make eccomerce apps using it's scripting language and modules. It is a scripting language I use on the Back-end.</p>
+                        </li>
+                        <li>
+                            <h3>Structured query language</h3>
+                            <p>I have used SQL lite to check the backend for urls and paths to stored data in the database.</p>
+                        </li>
+                        <li>
+                            <h3>MongoDB</h3>
+                            <p>I used this to store product data and user data for eccomerce. I used it along side Python3.</p>
+                        </li>
+                        <li>
+                            <h3>AWS</h3>
+                            <p>I used AWS services before like S3 to store product data and user data for eccomerce.</p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <!--Section 3-->
+            <section class="gridSection3">
+                <div>
+                    <img src="Assets\frameworks.png" alt="Image of frameworks like Angular, fontawesome and Bootstrap 4">
+                </div>
+                <div>
+                    <h2>Frameworks</h2>
+                    <ul>
+                        <li>
+                            <h3>Angular</h3>
+                            <p>Angular is a javascript framework to streamline the development process of JS coding to make it less tedious a task.</p>
+                        </li>
+                        <li>
+                            <h3>Bootstrap 4</h3>
+                            <p>Bootstrap is a framework used to quickly add general styling to a website that can reduce the time needed to style common elements for example.</p>
+                        </li>
+                        <li>
+                            <h3>NodeJS</h3>
+                            <p>Node is a framework used to test code and check functionality.</p>
+                        </li>
+                        <li>
+                            <h3>Font Awesome</h3>
+                            <p>I used to add some icons to page elements and some interactivity with built in javascript.</p>
+                        </li>
+                        <li>
+                            <h3>jQuery</h3>
+                            <p>I use jquery to reduce the amount of javascript code needed for the same functionality and cleaner code.</p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <!--Section 4-->
+            <section class="gridSection4">
+                <div>
+                    <i class="fas fa-graduation-cap"></i>
+                </div>
+                <div>
+                    <h2>Other skills, tools & qualifications</h2>
+                    <ul>
+                        <li>
+                            <h3>Github version control</h3>
+                            <p></p>
+                        </li>
+                        <li>
+                            <h3>Command Line interface</h3>
+                            <p></p>
+                        </li>
+                        <li>
+                            <h3>Git Bash</h3>
+                            <p></p>
+                        </li>
+                        <li>
+                            <h3>Heroku</h3>
+                            <p></p>
+                        </li>
+                        <li>
+                            <h3>Windows OS</h3>
+                            <p></p>
+                        </li>
+                        <li>
+                            <h3>Virtual Box</h3>
+                            <p></p>
+                        </li>
+                        <li>
+                            <h3>Gitpod</h3>
+                            <p></p>
+                        </li>
+                        <li>
+                            <h3>Visual Studio code editior</h3>
+                            <p></p>
+                        </li>
+                        <li>
+                            <h3>Js Bin</h3>
+                            <p></p>
+                        </li>
+                        <li>
+                            <h3>Chrome developer tools</h3>
+                            <p></p>
+                        </li>
+                        <li>
+                            <h3>Comptia A+, security+ and network +</h3>
+                            <p></p>
+                        </li>
+                        <li>
+                            <h3>Schools and online learning</h3>
+                            <h4>Diploma Code institute</h4>
+                            <p></p>
+                            <h4>Certificates IT career switch</h4>
+                            <p></p>
+                            <h4>Courses Udemy</h4>
+                            <p></p>
+                            <h4>Freecodecamp.org</h4>
+                            <p></p>
+                            <h4>Zenva</h4>
+                            <p></p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+        </main>
+        <!--Bottom page section -->
+        <footer class="gridFooter">
+            <h2>Made by Patrick Trollip 2020</h2>
+        </footer>
+    </div>
     <!--Javascript link -->
     <script src="CustomJS\custom.js"></script>
 </body>
