Refactored the html code in the pages to get rid of unwanted classes in header and footer elements

--- a/contact.html
+++ b/contact.html
@@ -8,22 +8,22 @@
     <script src="https://kit.fontawesome.com/6f3658f931.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="gridContainer">
-        <!--Top page section-->
-        <header class="gridHeader">
-            <!--Page heading -->
-            <h1>Contact me</h1>
-            <!-- Navigation bar-->
-            <nav>
-                <a href="index.html"><button>About</button></a>
-                <a href="contact.html"><button>Contact</button></a>
-                <a href="skills.html"><button>Skills</button></a>
-                <a href="projects.html"><button>Projects</button></a>
-            </nav>
-        </header>
-        <!--Main content section-->
-        <main>
-            <!--Section 1-->
+    <!--Top page section-->
+    <header>
+        <!--Page heading -->
+        <h1>Contact me</h1>
+        <!-- Navigation bar-->
+        <nav>
+            <a href="index.html"><button>About</button></a>
+            <a href="contact.html"><button>Contact</button></a>
+            <a href="skills.html"><button>Skills</button></a>
+            <a href="projects.html"><button>Projects</button></a>
+        </nav>
+    </header>
+    <!--Main content section-->
+    <main>
+        <!--Section 1-->
+        <div class="gridContainer">
             <section class="gridSection1">
                 <div>
                     <i class="fas fa-phone-alt"></i>
@@ -63,12 +63,12 @@
                     <p><a href="https://github.com/Patoman90">Patrick's github</a></p>
                 </div>
             </section>
-        </main>
-        <!--Bottom page section -->
-        <footer class="gridFooter">
-            <h2>Made by Patrick Trollip 2020</h2>
-        </footer>
-    </div>
+        </div>    
+    </main>
+    <!--Bottom page section -->
+    <footer>
+        <h2>Made by Patrick Trollip 2020</h2>
+    </footer>
     <!--Javascript link -->
     <script src="CustomJS\custom.js"></script>
 </body>
