--- a/skills.html
+++ b/skills.html
@@ -8,21 +8,21 @@
     <script src="https://kit.fontawesome.com/6f3658f931.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="gridContainer">
-        <!--Top page section-->
-        <header class="gridHeader">
-            <!--Page heading -->
-            <h1>My skillset</h1>
-            <!-- Navigation bar-->
-            <nav>
-                <a href="index.html"><button>About</button></a>
-                <a href="contact.html"><button>Contact</button></a>
-                <a href="skills.html"><button>Skills</button></a>
-                <a href="projects.html"><button>Projects</button></a>
-            </nav>
-        </header>
-        <!--Main content section-->
-        <main>
+    <!--Top page section-->
+    <header>
+        <!--Page heading -->
+        <h1>My skillset</h1>
+        <!-- Navigation bar-->
+        <nav>
+            <a href="index.html"><button>About</button></a>
+            <a href="contact.html"><button>Contact</button></a>
+            <a href="skills.html"><button>Skills</button></a>
+            <a href="projects.html"><button>Projects</button></a>
+        </nav>
+    </header>
+    <!--Main content section-->
+    <main>
+        <div class="gridContainer">
             <!--Section 1-->
             <section class="gridSection1">
                 <div>
@@ -172,12 +172,12 @@
                     </ul>
                 </div>
             </section>
-        </main>
-        <!--Bottom page section -->
-        <footer class="gridFooter">
-            <h2>Made by Patrick Trollip 2020</h2>
-        </footer>
-    </div>
+        </div>
+    </main>
+    <!--Bottom page section -->
+    <footer>
+        <h2>Made by Patrick Trollip 2020</h2>
+    </footer>
     <!--Javascript link -->
     <script src="CustomJS\custom.js"></script>
 </body>
