--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <link rel="stylesheet" href="CSS\style.css">
 </head>
 <body>
-    <div class="gridContainer">
-        <!--Top page section-->
-        <header class="gridHeader">
-            <h1>About me</h1>
-            <!-- Navigation bar-->
-            <nav>
-                <a href="index.html"><button>About</button></a>
-                <a href="contact.html"><button>Contact</button></a>
-                <a href="skills.html"><button>Skills</button></a>
-                <a href="projects.html"><button>Projects</button></a>
-            </nav>
-        </header>
-        <!--Main content section-->
-        <main>
+    <!--Top page section-->
+    <header>
+        <h1>About me</h1>
+        <!-- Navigation bar-->
+        <nav>
+            <a href="index.html"><button>About</button></a>
+            <a href="contact.html"><button>Contact</button></a>
+            <a href="skills.html"><button>Skills</button></a>
+            <a href="projects.html"><button>Projects</button></a>
+        </nav>
+    </header>
+    <!--Main content section-->
+    <main>
+        <div class="gridContainer">
             <!--Section 1-->
             <section class="gridSection1">
                 <img src="Assets\Guy.png" alt="Picture of Patrick Trollip dressed smart casual.">
@@ -62,12 +62,12 @@
                     <li>AWS S3</li>
                 </ul>
             </section>
-        </main>
-        <!--Bottom page section -->
-        <footer class="gridFooter">
-            <h2>Made by Patrick Trollip 2020</h2>
-        </footer>
-    </div>
+        </div>
+    </main>
+    <!--Bottom page section -->
+    <footer>
+        <h2>Made by Patrick Trollip 2020</h2>
+    </footer>
     <!--Javascript link -->
     <script src="CustomJS\custom.js"></script>
 </body>
