--- a/projects.html
+++ b/projects.html
@@ -7,21 +7,21 @@
     <link rel="stylesheet" href="CSS\style.css">
 </head>
 <body>
-    <div class="gridContainer">
-        <!--Top page section-->
-        <header class="gridHeader">
-            <!--Page heading -->
-            <h1>My top projects</h1>
-            <!-- Navigation bar-->
-            <nav>
-                <a href="index.html"><button>About</button></a>
-                <a href="contact.html"><button>Contact</button></a>
-                <a href="skills.html"><button>Skills</button></a>
-                <a href="projects.html"><button>Projects</button></a>
-            </nav>
-        </header>
-        <!--Main content section-->
-        <main>
+    <!--Top page section-->
+    <header>
+        <!--Page heading -->
+        <h1>My top projects</h1>
+        <!-- Navigation bar-->
+        <nav>
+            <a href="index.html"><button>About</button></a>
+            <a href="contact.html"><button>Contact</button></a>
+            <a href="skills.html"><button>Skills</button></a>
+            <a href="projects.html"><button>Projects</button></a>
+        </nav>
+    </header>
+    <!--Main content section-->
+    <main>
+        <div class="gridContainer">
             <!--Section 1-->
             <section class="gridSection1">
                 <h2>Mixed messages Project</h2>
@@ -59,12 +59,12 @@
                 <h3>Visit my github</h3>
                 <a href="https://github.com/Patoman90">My github</a>
             </section>
-        </main>
-        <!--Bottom page section -->
-        <footer class="gridFooter">
-            <h2>Made by Patrick Trollip 2020</h2>
-        </footer>
-    </div>
+        </div>
+    </main>
+    <!--Bottom page section -->
+    <footer>
+        <h2>Made by Patrick Trollip 2020</h2>
+    </footer>
     <!--Javascript link -->
     <script src="CustomJS\custom.js"></script>
 </body>
